brain/sources/prod-metadata/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>OB-{0000}</displayFormat>
        <label>OnBoarding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>