brain/sources/prod-metadata/objects/Onboarding__c/fields/Account_information_collected__c.field-meta.xml
<CustomField>
    <fullName>Account_information_collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account information collected</label>
    <type>Checkbox</type>
</CustomField>