brain/sources/prod-metadata/objects/Onboarding__c/fields/Assigned_to_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned to Marketing</label>
    <type>Checkbox</type>
</CustomField>