brain/sources/prod-metadata/objects/Onboarding__c/fields/ATS_Score__c.field-meta.xml
<CustomField>
    <fullName>ATS_Score__c</fullName>
    <label>ATS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>