brain/sources/prod-metadata/objects/Onboarding__c/fields/Authorized_To_Work_In_US__c.field-meta.xml
<CustomField>
    <fullName>Authorized_To_Work_In_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized To Work In US?</label>
    <type>Checkbox</type>
</CustomField>