brain/sources/prod-metadata/objects/Onboarding__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>