brain/sources/prod-metadata/objects/Onboarding__c/fields/Candidate_Approval__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Approval</label>
    <type>Checkbox</type>
</CustomField>