brain/sources/prod-metadata/objects/Onboarding__c/fields/Candidate_Form_Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Form_Additional_Details__c</fullName>
    <label>Candidate Form Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>