brain/sources/prod-metadata/objects/Onboarding__c/fields/Candidate_form_filled__c.field-meta.xml
<CustomField>
    <fullName>Candidate_form_filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate form filled</label>
    <type>Checkbox</type>
</CustomField>