brain/sources/prod-metadata/objects/Onboarding__c/fields/Candidate_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Time_Zone__c</fullName>
    <label>Candidate Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Time_Zone</valueSetName>
    </valueSet>
</CustomField>