brain/sources/prod-metadata/objects/Onboarding__c/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <label>Certifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>