brain/sources/prod-metadata/objects/Onboarding__c/fields/CGPA_Score__c.field-meta.xml
<CustomField>
    <fullName>CGPA_Score__c</fullName>
    <label>CGPA Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>