brain/sources/prod-metadata/objects/Onboarding__c/fields/College_Name_4__c.field-meta.xml
<CustomField>
    <fullName>College_Name_4__c</fullName>
    <label>College Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>