brain/sources/prod-metadata/objects/Onboarding__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>