brain/sources/prod-metadata/objects/Onboarding__c/fields/Company_name_1__c.field-meta.xml
<CustomField>
    <fullName>Company_name_1__c</fullName>
    <label>Company name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>