brain/sources/prod-metadata/objects/Onboarding__c/fields/company_name_2__c.field-meta.xml
<CustomField>
    <fullName>company_name_2__c</fullName>
    <label>company name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>