brain/sources/prod-metadata/objects/Onboarding__c/fields/company_name_3__c.field-meta.xml
<CustomField>
    <fullName>company_name_3__c</fullName>
    <label>company name 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>