brain/sources/prod-metadata/objects/Onboarding__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Name</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>