brain/sources/prod-metadata/objects/Onboarding__c/fields/Current_Domain__c.field-meta.xml
<CustomField>
    <fullName>Current_Domain__c</fullName>
    <label>Current Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>