brain/sources/prod-metadata/objects/Onboarding__c/fields/Daily_Interview_Availability__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interview_Availability__c</fullName>
    <label>Daily Interview Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>