brain/sources/prod-metadata/objects/Onboarding__c/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I confirm that all the above information provided is accurate. Any information which is wrong may result in termination of my services.</description>
    <inlineHelpText>I confirm that all the above information provided is accurate. Any information which is wrong may result in termination of my services.</inlineHelpText>
    <label>I confirm that all the above information</label>
    <type>Checkbox</type>
</CustomField>