brain/sources/prod-metadata/objects/Onboarding__c/fields/Degree_2__c.field-meta.xml
<CustomField>
    <fullName>Degree_2__c</fullName>
    <label>Degree 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Degree</valueSetName>
    </valueSet>
</CustomField>