brain/sources/prod-metadata/objects/Onboarding__c/fields/Degree_3__c.field-meta.xml
<CustomField>
    <fullName>Degree_3__c</fullName>
    <label>Degree 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Degree</valueSetName>
    </valueSet>
</CustomField>