brain/sources/prod-metadata/objects/Onboarding__c/fields/Degree_End_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Degree_End_Date_3__c</fullName>
    <label>Degree End Date 3</label>
    <type>Date</type>
</CustomField>