brain/sources/prod-metadata/objects/Onboarding__c/fields/Degree_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Degree_End_Date__c</fullName>
    <label>Degree End Date</label>
    <type>Date</type>
</CustomField>