brain/sources/prod-metadata/objects/Onboarding__c/fields/Degree_Start_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Degree_Start_Date_4__c</fullName>
    <label>Degree Start Date 4</label>
    <type>Date</type>
</CustomField>