brain/sources/prod-metadata/objects/Onboarding__c/fields/Duration_1__c.field-meta.xml
<CustomField>
    <fullName>Duration_1__c</fullName>
    <label>Duration 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>