brain/sources/prod-metadata/objects/Onboarding__c/fields/Duration_2__c.field-meta.xml
<CustomField>
    <fullName>Duration_2__c</fullName>
    <label>Duration 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>