brain/sources/prod-metadata/objects/Onboarding__c/fields/Duration_3__c.field-meta.xml
<CustomField>
    <fullName>Duration_3__c</fullName>
    <label>Duration 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>