brain/sources/prod-metadata/objects/Onboarding__c/fields/Education_Country__c.field-meta.xml
<CustomField>
    <fullName>Education_Country__c</fullName>
    <label>Education Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>