brain/sources/prod-metadata/objects/Onboarding__c/fields/Education_Details__c.field-meta.xml
<CustomField>
    <fullName>Education_Details__c</fullName>
    <label>Education Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>