brain/sources/prod-metadata/objects/Onboarding__c/fields/End_Date_3__c.field-meta.xml
<CustomField>
    <fullName>End_Date_3__c</fullName>
    <label>End Date 3</label>
    <type>Date</type>
</CustomField>