brain/sources/prod-metadata/objects/Onboarding__c/fields/End_Date_4__c.field-meta.xml
<CustomField>
    <fullName>End_Date_4__c</fullName>
    <label>End Date 4</label>
    <type>Date</type>
</CustomField>