brain/sources/prod-metadata/objects/Onboarding__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>I_choose_not_to_disclose</fullName>
                <label>I choose not to disclose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>