brain/sources/prod-metadata/objects/Onboarding__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>