brain/sources/prod-metadata/objects/Onboarding__c/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institute</label>
    <referenceTo>Education_History__c</referenceTo>
    <relationshipLabel>Onboardings (Institute)</relationshipLabel>
    <relationshipName>Onboardings1</relationshipName>
    <type>Lookup</type>
</CustomField>