brain/sources/prod-metadata/objects/Onboarding__c/fields/Institute_Country__c.field-meta.xml
<CustomField>
    <fullName>Institute_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institute Country</label>
    <referenceTo>Education_History__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>