brain/sources/prod-metadata/objects/Onboarding__c/fields/Institutes__c.field-meta.xml
<CustomField>
    <fullName>Institutes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institute</label>
    <referenceTo>Institute__c</referenceTo>
    <relationshipLabel>Onboardings</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>