brain/sources/prod-metadata/objects/Onboarding__c/fields/Internal_Approval__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Approval</label>
    <type>Checkbox</type>
</CustomField>