brain/sources/prod-metadata/objects/Onboarding__c/fields/Job_Location_4__c.field-meta.xml
<CustomField>
    <fullName>Job_Location_4__c</fullName>
    <label>Job Location 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>