brain/sources/prod-metadata/objects/Onboarding__c/fields/Joining_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date_2__c</fullName>
    <label>Joining Date 2</label>
    <type>Date</type>
</CustomField>