brain/sources/prod-metadata/objects/Onboarding__c/fields/Joining_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date_3__c</fullName>
    <label>Joining Date 3</label>
    <type>Date</type>
</CustomField>