brain/sources/prod-metadata/objects/Onboarding__c/fields/Joining_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Joining_Date_4__c</fullName>
    <label>Joining Date 4</label>
    <type>Date</type>
</CustomField>