brain/sources/prod-metadata/objects/Onboarding__c/fields/Last_4_digits_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_digits_of_SSN__c</fullName>
    <label>Last 4 digits of SSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>