brain/sources/prod-metadata/objects/Onboarding__c/fields/Latest_Onboarding_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Latest_Onboarding_Form_Link__c</fullName>
    <label>Latest Onboarding Form Link</label>
    <type>Url</type>
</CustomField>