brain/sources/prod-metadata/objects/Onboarding__c/fields/Latest_Onboarding_Opened_On__c.field-meta.xml
<CustomField>
    <fullName>Latest_Onboarding_Opened_On__c</fullName>
    <label>Latest Onboarding Opened On</label>
    <type>DateTime</type>
</CustomField>