brain/sources/prod-metadata/objects/Onboarding__c/fields/Latest_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Onboarding_Status__c</fullName>
    <label>Latest Onboarding Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>