brain/sources/prod-metadata/objects/Onboarding__c/fields/LinkedIn_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Email_Id__c</fullName>
    <label>LinkedIn Email Id</label>
    <type>Email</type>
</CustomField>