brain/sources/prod-metadata/objects/Onboarding__c/fields/LinkedIn_Optimization__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Optimization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Optimization</label>
    <type>Checkbox</type>
</CustomField>