brain/sources/prod-metadata/objects/Onboarding__c/fields/LinkedIn_Password__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Password__c</fullName>
    <label>LinkedIn Password</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>