brain/sources/prod-metadata/objects/Onboarding__c/fields/LinkedIn_Password_Updated__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Password_Updated__c</fullName>
    <label>LinkedIn Password Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>