brain/sources/prod-metadata/objects/Onboarding__c/fields/Linkedin_URL__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_URL__c</fullName>
    <label>Linkedin URL</label>
    <type>Url</type>
</CustomField>