brain/sources/prod-metadata/objects/Onboarding__c/fields/LinkedIn_Username__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Username__c</fullName>
    <label>LinkedIn Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>