brain/sources/prod-metadata/objects/Onboarding__c/fields/List_of_Certifications__c.field-meta.xml
<CustomField>
    <fullName>List_of_Certifications__c</fullName>
    <label>List of Certifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>