brain/sources/prod-metadata/objects/Onboarding__c/fields/Location_1__c.field-meta.xml
<CustomField>
    <fullName>Location_1__c</fullName>
    <label>Location 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>