brain/sources/prod-metadata/objects/Onboarding__c/fields/Location_2__c.field-meta.xml
<CustomField>
    <fullName>Location_2__c</fullName>
    <label>Location 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>