brain/sources/prod-metadata/objects/Onboarding__c/fields/Location_3__c.field-meta.xml
<CustomField>
    <fullName>Location_3__c</fullName>
    <label>Location 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>