brain/sources/prod-metadata/objects/Onboarding__c/fields/Marketing_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Id__c</fullName>
    <label>Marketing Email Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>