brain/sources/prod-metadata/objects/Onboarding__c/fields/Marketing_Email_Password__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Password__c</fullName>
    <label>Marketing Email Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>