brain/sources/prod-metadata/objects/Onboarding__c/fields/Mention_your_Visa_dates_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Mention_your_Visa_dates_if_applicable__c</fullName>
    <label>Mention your Visa dates if applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>