brain/sources/prod-metadata/objects/Onboarding__c/fields/No_of_Degrees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Degrees__c</fullName>
    <label>No of Degrees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>