brain/sources/prod-metadata/objects/Onboarding__c/fields/Offer_letter_amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_letter_amount__c</fullName>
    <label>Offer letter amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>