brain/sources/prod-metadata/objects/Onboarding__c/fields/Onboarding_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Form_Link__c</fullName>
    <label>Onboarding Form Link</label>
    <type>Url</type>
</CustomField>