brain/sources/prod-metadata/objects/Onboarding__c/fields/Owner_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Formula__c</fullName>
    <formula>Owner:User.FirstName &amp;&quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name Formula</label>
    <type>Text</type>
</CustomField>