brain/sources/prod-metadata/objects/Onboarding__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Career Launcher</fullName>
            </value>
            <value>
                <fullName>Career Accelerator</fullName>
            </value>
            <value>
                <fullName>Premium / Fastrack</fullName>
            </value>
            <value>
                <fullName>Ultimate Career Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>