brain/sources/prod-metadata/objects/Onboarding__c/fields/Position_role_2__c.field-meta.xml
<CustomField>
    <fullName>Position_role_2__c</fullName>
    <label>Position role 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>