brain/sources/prod-metadata/objects/Onboarding__c/fields/Preferred_Job_Positions__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Job_Positions__c</fullName>
    <label>Preferred Job Positions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>