brain/sources/prod-metadata/objects/Onboarding__c/fields/Preferred_Tech_stack_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Tech_stack_If_Applicable__c</fullName>
    <label>Preferred Tech stack (If Applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>