brain/sources/prod-metadata/objects/Onboarding__c/fields/Professional_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Professional_Profiles__c</fullName>
    <label>Professional Profiles</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>