brain/sources/prod-metadata/objects/Onboarding__c/fields/Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnicity__c</fullName>
    <label>Race/Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaska Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Two or More Races</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
            <value>
                <fullName>I choose not to disclose</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>