brain/sources/prod-metadata/objects/Onboarding__c/fields/Resume_Created__c.field-meta.xml
<CustomField>
    <fullName>Resume_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Created</label>
    <type>Checkbox</type>
</CustomField>