brain/sources/prod-metadata/objects/Onboarding__c/fields/Resume_Creation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resume_Creation_Notes__c</fullName>
    <label>Resume Creation Notes</label>
    <type>TextArea</type>
</CustomField>