brain/sources/prod-metadata/objects/Onboarding__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>