brain/sources/prod-metadata/objects/Onboarding__c/fields/Salary_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations__c</fullName>
    <label>Salary Expectations (Old Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>