brain/sources/prod-metadata/objects/Onboarding__c/fields/Salary_Expectations_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations_Picklist__c</fullName>
    <label>Salary Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$60,000 - $80,000</fullName>
            </value>
            <value>
                <fullName>$80,000 - $120,000</fullName>
            </value>
            <value>
                <fullName>$120,000 - $160,000</fullName>
            </value>
            <value>
                <fullName>$160,000 - $200,000</fullName>
            </value>
            <value>
                <fullName>$200,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>