brain/sources/prod-metadata/objects/Onboarding__c/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>