brain/sources/prod-metadata/objects/Onboarding__c/fields/Service_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Agreement Sent</label>
    <type>Checkbox</type>
</CustomField>