brain/sources/prod-metadata/objects/Onboarding__c/fields/Service_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>