brain/sources/prod-metadata/objects/Onboarding__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>